packages/components/components/Main/Main.module.css
.main {
	height: 100dvh;

	background-color: var(--ui-bg-action-active);
}

.main:has(nav[data-component="Navigation"]) nav[data-component="Menu"] {
	top: 64px;

	height: calc(100dvh - 64px);
}

@media (min-width: 960px) {
	.main:has(nav[data-component="Menu"]) section[data-component="Content"] {
		padding-left: 256px;
	}
}

